--- a/course/cos284/intro.adoc
+++ b/course/cos284/intro.adoc
@@ -13,7 +13,8 @@ Here are some interesting factoids about the course:
 
 [sed]
 --
-In a strange twist of fate,
+In a strange twist of fate
+(like no other),
 the previous edition of the textbook:
 
 image::csapp.jpg[CS:APP Cover]
